@@ -852,7 +852,7 @@ var DimpBase = {
 
     contextOnClick: function(e)
     {
-        var tmp,
+        var tmp, tmp2,
             elt = e.memo.elt,
             id = elt.readAttribute('id'),
             menu = e.memo.trigger;
@@ -903,21 +903,24 @@ var DimpBase = {
             });
             break;
 
-        case 'ctx_mbox_exportopts_mbox':
-        case 'ctx_mbox_exportopts_zip':
+        case 'ctx_mbox_export':
             tmp = this.contextMbox(e);
 
             this.viewaction = function(e) {
                 HordeCore.download('', {
                     actionID: 'download_mbox',
                     mbox_list: Object.toJSON([ tmp.retrieve('mbox') ]),
-                    zip: Number(id == 'ctx_mbox_exportopts_zip')
+                    type: e.element().down('[name=download_type]').getValue()
                 });
             };
 
+            tmp2 = new Element('SELECT', { name: 'download_type' });
+            $H(DimpCore.conf.download_types).each(function(d) {
+                tmp2.insert(new Element('OPTION', { value: d.key }).insert(d.value));
+            });
             HordeDialog.display({
+                form: tmp2,
                 form_id: 'dimpbase_confirm',
-                noinput: true,
                 text: DimpCore.text.download_mbox
             });
             break;
@@ -3730,7 +3733,6 @@ var DimpBase = {
         DM.addSubMenu('ctx_oa_setflag', 'ctx_flag');
         DM.addSubMenu('ctx_oa_unsetflag', 'ctx_flag');
         DM.addSubMenu('ctx_mbox_setflag', 'ctx_mbox_flag');
-        DM.addSubMenu('ctx_mbox_export', 'ctx_mbox_exportopts');
 
         DimpCore.addPopdown($('msglistHeaderHoriz').down('.msgSubject').identify(), 'subjectsort', {
             insert: 'bottom'
