@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Collapse multiple mailbox export options in dynamic mailbox view to single action.
 * [mms] Importing a PGP personal key now only requires the private key.
  </notes>
  <contents>
@@ -2831,6 +2832,7 @@
    <date>2012-10-30</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Collapse multiple mailbox export options in dynamic mailbox view to single action.
 * [mms] Importing a PGP personal key now only requires the private key.
    </notes>
   </release>
